@@ -192,19 +192,21 @@ block|}
 name|Driver
 name|driver
 init|=
+operator|(
+name|Driver
+operator|)
 name|objectFactory
 operator|.
-name|newInstance
+name|getJavaClass
 argument_list|(
-name|Driver
-operator|.
-name|class
-argument_list|,
 name|properties
 operator|.
 name|getJdbcDriver
 argument_list|()
 argument_list|)
+operator|.
+name|newInstance
+argument_list|()
 decl_stmt|;
 return|return
 operator|new
