@@ -309,16 +309,18 @@ decl_stmt|;
 name|Driver
 name|driver
 init|=
+operator|(
+name|Driver
+operator|)
 name|objectFactory
 operator|.
-name|newInstance
+name|getJavaClass
 argument_list|(
-name|Driver
-operator|.
-name|class
-argument_list|,
 name|driverClass
 argument_list|)
+operator|.
+name|newInstance
+argument_list|()
 decl_stmt|;
 return|return
 name|DataSourceBuilder
